# mbogi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
config/: .env.example
mbogi/: asgi.py  settings.py  urls.py  wsgi.py
