[tool.poetry]
name = "mbogi"
version = "0.1.0"
description = "A social application where users can join and interh other by sharing content"
authors = ["Samwel Kanda"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
